src/components/header.css
:root {
    --home-color: steelblue;
    --home-color-transparent: rgba(72, 129, 178, 0.4);
    --home-shadow-faint:
        rgba(72, 129, 178, 1) 0px 3px 6px -1px,
        rgba(72, 129, 178, 0.24) 0px 2px 4px -1px;
    --home-shadow-strong:
        rgba(72, 129, 178, 0.8) 0px 4px 6px -1px,
        rgba(72, 129, 178, 0.24) 0px 10px 6px -2px;
    --shop-color: mediumseagreen;
    --shop-color-transparent: rgba(35, 142, 104, 0.4);
    --shop-shadow-faint:
        rgba(35, 142, 104, 1) 0px 3px 6px -1px,
        rgba(35, 142, 104, 0.24) 0px 2px 4px -1px;
    --shop-shadow-strong:
        rgba(35, 142, 104, 0.8) 0px 4px 6px -1px,
        rgba(35, 142, 104, 0.24) 0px 10px 6px -2px;
    --cart-color: sandybrown;
    --cart-color-transparent: rgba(244, 163, 96, 0.4);
    --cart-color-complimentary: brown;
    --cart-shadow-faint:
        rgba(244, 163, 96, 1) 0px 3px 6px -1px,
        rgba(244, 163, 96, 0.24) 0px 2px 4px -1px;
    --cart-shadow-strong:
        rgba(244, 163, 96, 0.8) 0px 4px 6px -1px,
        rgba(244, 163, 96, 0.24) 0px 10px 6px -2px;

    --focus-outline-width: 2px;
}

nav {
    position: sticky;
    display: flex;
    justify-content: flex-start;
    align-items: stretch;
    gap: 48px;

    width: max-content;

    padding: 0px 32px;
    border-bottom-left-radius: 24px;
    border-bottom-right-radius: 24px;
    margin-left: 64px;
    box-shadow: 0px 2px 3px darkgrey;

    outline: 1px solid slategray;

    user-select: none;
}

h1 {
    margin: 8px 0px;

    font-size: 1.5rem;
}

ol {
    list-style-type: none;

    display: flex;
    align-items: stretch;

    padding: 0;
    margin: 0;

    font-size: 1.2rem;
}

li {
    z-index: 10;
    box-sizing: border-box;

    display: flex;
    gap: 8px;

    text-align: center;
    vertical-align: middle;

    transition: color 250ms ease-in-out;

    .navContent {
        padding: 2px 8px;
        border: 0px;
        outline: 0px;
        border-radius: 8px;

        font-size: inherit;
        font-family: inherit;

        background-color: transparent;

        transition:
            transform 250ms ease-in-out,
            border-radius 150ms ease-in,
            box-shadow 250ms ease-in-out,
            background-color 250ms ease-in-out;
    }
}

.navContainer {
    display: flex;

    padding: 0px 8px;

    overflow: hidden;
    background-clip: padding-box;
    clip-path: inset(0px 0px -15px 0px);

    transition: box-shadow 250ms ease;
}

li:hover,
li:has(> div > .navContent:focus-visible) {
    .navContainer {
        box-shadow: var(--home-shadow-faint);
    }
}

li:hover {
    .navContent {
        transform: translate(-3px, -3px);

        box-shadow: 6px 6px 0px var(--home-color-transparent);

        color: whitesmoke;
        background-color: var(--home-color);
    }
}

li:has(> div > .navContent:focus-visible) {
    outline: var(--focus-outline-width) solid var(--home-color);
}

li:active,
li:active:has(> div > .navContent:focus-visible) {
    color: whitesmoke;

    transition-duration: 100ms;

    .navContainer {
        box-shadow: var(--home-shadow-strong);

        transition-duration: 100ms;
    }

    .navContent {
        transform: none;

        box-shadow: 0px 0px 0px 16px var(--home-color);

        border-radius: 0px;

        background-color: var(--home-color);

        transition-duration: 100ms;
    }
}

.navShop:hover,
.navShop:has(> div > .navContent:focus-visible) {
    .navContainer {
        box-shadow: var(--shop-shadow-faint);
    }
}

.navShop:hover {
    .navContent {
        box-shadow: 6px 6px 0px var(--shop-color-transparent);

        background-color: var(--shop-color);
    }
}

.navShop:has(> div > .navContent:focus-visible) {
    outline: var(--focus-outline-width) solid var(--shop-color);
}

.navShop:active,
.navShop:active:has(> div > .navContent:focus-visible) {
    .navContainer {
        box-shadow: var(--shop-shadow-strong);

        transition-duration: 100ms;
    }

    .navContent {
        transform: none;

        box-shadow: 0px 0px 0px 16px var(--shop-color);

        background-color: var(--shop-color);

        transition-duration: 100ms;
    }
}

.navCart > .navContent {
    display: flex;
}

.navCart:hover,
.navCart:has(> div > .navContent:focus-visible) {
    .navContainer {
        box-shadow: var(--cart-shadow-faint);
    }
}

.navCart:hover {
    .navContent {
        box-shadow: 6px 6px 0px var(--cart-color-transparent);

        background-color: var(--cart-color);
    }

    .cartNumber {
        background-color: var(--cart-color-complimentary);
    }
}

.navCart:has(> div > .navContent:focus-visible) {
    outline: var(--focus-outline-width) solid var(--cart-color);
}

.navCart:active,
.navCart:active:has(> div > .navContent:focus-visible) {
    .navContainer {
        box-shadow: var(--cart-shadow-strong);

        transition-duration: 100ms;
    }

    .navContent {
        transform: none;
        box-shadow: 0px 0px 0px 16px var(--cart-color);

        background-color: var(--cart-color);

        transition-duration: 100ms;
    }

    .cartNumber {
        background-color: var(--cart-color-complimentary);
    }
}

.cartNumber {
    display: inline-flex;

    width: 28px;
    aspect-ratio: 1/1;

    padding: 0px;
    border-radius: 50%;
    margin-left: 12px;

    color: whitesmoke;
    font-size: 0.9rem;
    font-weight: bold;
    text-align: center;

    background-color: sandybrown;

    /*transform: translateY(-1px);*/

    transition: background-color 250ms ease-in-out;
}

.cartNumber.empty {
    display: none;
}

